# PhilsFootballManagerOpenGL

./: CMakeLists.txt  README.md  RonnyShrine  glad.c  imgui.ini  main.cpp  shape.cpp  shape.hpp
data/shaders/: triangle.fs  triangle.vs
docs/: Design Document.odt
include/: actor.hpp  shader.hpp  texture.cpp  texture.hpp
include/glad/: glad.h
